COMMERCE-1719 - sf and fixed cart icon position on ie11

--- a/commerce-theme-minium/commerce-theme-minium/static-version/src/styles/components/commerce-topbar-button.scss
+++ b/commerce-theme-minium/commerce-theme-minium/static-version/src/styles/components/commerce-topbar-button.scss
@@ -63,8 +63,12 @@
 		font-weight: bold;
 		height: 18px;
 		justify-content: center;
+		left: 50%;
 		line-height: 1;
+		margin-left: -9px;
+		margin-top: -9px;
 		position: absolute;
+		top: 50%;
 		transform: translate(17px, -7px);
 		transition: all ease 200ms;
 		width: 18px;
